fix: scrollbar custom styles

--- a/docs/.vuepress/theme/styles/scrollbar.styl
+++ b/docs/.vuepress/theme/styles/scrollbar.styl
@@ -1,28 +1,31 @@
 scrollbar = @block {
     &::-webkit-scrollbar {
-        width: 12px;
+        width: 5px;
         position: fixed;
         right: 0;
-        border-left: 2px solid $secondaryColor;
     }
 
     &::-webkit-scrollbar-thumb {
         background-color: transparent;
-        transition: background-color 0.5s;
-    }
-
-    &::-webkit-scrollbar-thumb:hover,
-    &::-webkit-scrollbar-thumb:active,
-    &::-webkit-scrollbar-thumb:focus,
-    &::-webkit-scrollbar-thumb:focus-within {
-        background-color: $borderColor;
+        transition: background-color 0.3s;
     }
 
     &:hover::-webkit-scrollbar-thumb,
-    &:active::-webkit-scrollbar-thumb,
-    &:focus::-webkit-scrollbar-thumb,
-    &:focus-within::-webkit-scrollbar-thumb {
-        background-color: $borderColor;
+    &::-webkit-scrollbar-thumb:hover {
+        background-color: $tertiaryColor;
     }
+
+    // Firefox
+    & {
+        scrollbar-color: transparent transparent;
+        scrollbar-width: thin;
+
+        transition: scrollbar-color 0.3s;
+    }
+
+    &:hover {
+        scrollbar-color: $tertiaryColor transparent;
+    }
+
 }
 
